--- a/inst/rmd/input.Rmd
+++ b/inst/rmd/input.Rmd
@@ -1,42 +1,147 @@
 ---
+title: "Maxquant Summary.txt Summary"
+author: "ningzhibinn@gmail.com"
+date: "`r Sys.time()`"
 output:
-  html_document: default
-  pdf_document: default
-  word_document: default
+  html_document:
+    fig_width: 10
+    fig_caption: TRUE
+    toc: true
+    toc_depth: 4
+    toc_float:
+      collapsed: TRUE
+      smooth_scroll: TRUE
+    number_sections: true
+params:  
+  summary_file_tbl: !r mtcars ### note that the value is the real value, here supposed to be a read in data.table for one click function.  
 ---
-> Output automatically refreshes 5 seconds after editing markdown!
 
-The normal (or Gaussian) distribution is defined as follows:
+<style type="text/css">
+.main-container {
+  max-width: 1400px;
+  margin-left: auto;
+  margin-right: auto;
+}
+</style>
 
-$$latex
-f(x;\mu,\sigma^2) = \frac{1}{\sigma\sqrt{2\pi}} 
-e^{ -\frac{1}{2}\left(\frac{x-\mu}{\sigma}\right)^2 }
-$$
 
-To generate random draws from a normal distribution we use the **rnorm** function:
+```{r setup, include=FALSE}
+# enviroment setup
+knitr::opts_chunk$set(echo = FALSE,warning = FALSE, message = FALSE, cache = TRUE)
 
-```{r block1}
-
-output <- rnorm(1000, 100, 15)
-
-```
-
-The normal distribution has the typical bell shape:
-
-```{r block2, fig.width=8, fig.height=5}
+library(tidyverse)
 library(ggplot2)
-qplot(output)
+#library(plotly)
+#library(DT) # for interactive data table display 
+
+# local usage
+# rmarkdown::render("MQ_report_summary_ocpu.Rmd", params = list(summary_file_tbl =  your_readin_tbl))
+# on local machine, your_readin_tbl is a data table, while on ocpu, your_readin_tbl is a json formatted table
+
+
 ```
 
-## Kernel density estimation
 
-We can perform density estimation on the sample:
 
-```{r block3, fig.width=8, fig.height=5}
-plot(density(output))
-``` 
+```{r function_needed, recho=FALSE}
 
-## Carl Friedrich Gauß
+tidy_MQ_summary <- function(df_summary.txt){
+  
+  # df_summary.txt has to be a tidyverse tbl format, from read_tsv
+  # take out the last line to organize into a data.frame
+  
+  last_line <- t(df_summary.txt[nrow(df_summary.txt),])
+  last_line[last_line[,1] == ""] <- NA
+  last_line[last_line[,1] == "0"] <- NA
+  last_line <- last_line[-1,, drop = FALSE]
+  last_line <- last_line[which(!is.na(last_line[,1])),, drop =  FALSE]
+  colnames(last_line) <- ("values")
+  
+  summary <- df_summary.txt[-nrow(df_summary.txt),] # remove the last line
+  
+  # take out rows about raw files summary 
+  df_rawfiles <-summary[!is.na(summary$Experiment),]
+  
+  # take out rows about experiment summary
+  df_experiment <- summary[is.na(summary$Experiment),]
 
-This little guy had something to do with it
+  
+  return(list("summary_all" = last_line,
+              "summary_rawfiles" = df_rawfiles,
+              "summary_experiment" = df_experiment
+              
+  ))
+  
+}
+
+```
+
+
+
+```{r file_summary, echo=FALSE,fig.width= 15,fig.height=10}
+
+
+
+# start from the data table for parametrized version
+summary_file_summary <- tidy_MQ_summary(params$summary_file_tbl)
+
+# This line is only for debugging
+#summary_file  <- read_tsv("22122017_Colon_Aging_summary.txt", col_names = TRUE)
+#summary_file_summary <- tidy_MQ_summary(summary_file)
+
+
+
+
+```
+
+
+# Identification by Experiment
+
+```{r id_by_experiment, echo=FALSE,fig.width= 8,fig.height=8}
+
+exp <- summary_file_summary$summary_experiment
+p <-ggplot(data=exp, aes(x=`Raw file`, y=`Peptide Sequences Identified`)) +
+  geom_bar(stat="identity") + coord_flip()
+
+plotly::ggplotly(p)
+
+```
+
+
+
+
+# Overal performance
+
+check the averaged performance from all raw files:
+
+```{r echo=FALSE}
+nrows <- nrow(summary_file_summary$summary_all)
+DT::datatable(summary_file_summary$summary_all,options = list(pageLength = nrows))
+
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
