--- a/inst/rmd/ML_report_taxonomy.Rmd
+++ b/inst/rmd/ML_report_taxonomy.Rmd
@@ -104,13 +104,21 @@ tidy_MQ_taxonomy <- function(df_taxonomy.txt){
 
 ```{r file_taxonomy, echo=FALSE, fig.width= 15,fig.height=10}
 
-# start from the data table for parametrized version
-df_taxonomy.txt <- params$input_datatable
-summary_file_taxonomy <- tidy_MQ_taxonomy(df_taxonomy.txt)
 
-# start from the data table
-#df_taxonomy.txt  <- read_excel("MetaLab_taxonomy.xlsx", sheet = 2)
-#summary_file_taxonomy <- tidy_MQ_taxonomy(df_taxonomy.txt)
+# input
+if(length(params$input_datatable) ==1){
+  # test with local test with local files in the same dir,
+  df_taxonomy.txt  <- read_excel("MetaLab_taxonomy.xlsx", sheet = 2)
+
+}else{
+  # opencpu render from data table by parametrized input
+  df_taxonomy.txt <- params$input_datatable
+}
+
+
+# tidy
+
+summary_file_taxonomy <- tidy_MQ_taxonomy(df_taxonomy.txt)
 
 
 ```
