--- a/inst/rmd/ML_report_function.Rmd
+++ b/inst/rmd/ML_report_function.Rmd
@@ -28,7 +28,7 @@ params:
 
 ```{r setup, include=FALSE}
 # enviroment setup
-knitr::opts_chunk$set(echo = FALSE,warning = FALSE, message = FALSE, cache = TRUE)
+knitr::opts_chunk$set(echo = FALSE,warning = FALSE, message = FALSE, cache = FALSE)
 
 library(tidyverse)
 library(ggplot2)
